# sharkdb-engine

./: .gitmodules  CMakeLists.txt  LICENSE
cmake/: clang-format.cmake
include/sharkdb/: decode_as_info.capnp  dissect.capnp  encap_info.capnp  file_io.capnp  file_type_info.capnp  proto_info.capnp
src/: CMakeLists.txt  decode_as_info.cpp  decode_as_info.hpp  dissect.cpp  dissect.hpp  encap_info.cpp  encap_info.hpp  file_type_info.cpp  file_type_info.hpp  main.cpp  pref_info.cpp  pref_info.hpp  proto_info.cpp  proto_info.hpp  read.cpp  read.hpp  sharkdb.capnp  sharkdb_pref_info.capnp  sharkdb_read.capnp  utils.hpp  write.cpp  write.hpp
